--- a/view/class.html
+++ b/view/class.html
@@ -523,7 +523,7 @@
 	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>
 	
 	 <script type="text/javascript">
-	 	   new vuePrcatice = new Vue({
+	 	   vuePrcatice = new Vue({
 	 	   	el:'#',        //绑定id
 	 	   	data:,        //绑定数据
 	 	   	methods{        //方法
