--- a/css/read_book.css
+++ b/css/read_book.css
@@ -363,9 +363,9 @@ font-size:inherit;text-rendering:auto;
 .error-read .info,.loading-read .info {
 	margin:0
 }
-.loading-read .bg {
+/*.loading-read .bg {
 	background:url(/static/f940948c.gif) 50% 50% no-repeat
-}
+}*/
 ol,ul {
 	list-style:none;
 	margin:0;
